<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.example.healyj36.quizapp.ChatRoom">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:id="@+id/chat_room_title"
        android:text="@string/chat_room_title"
        android:textStyle="bold"
        android:textSize="@dimen/sub_title_size"
        android:gravity="center_vertical|center"
        android:contentDescription="@string/chat_room_title_asc_description"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical|center"
        android:padding="@dimen/padding_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chat_room_description"
            android:text="@string/chat_room_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5dp"
            android:id="@+id/chat_room_instructions"
            android:text="@string/chat_room_instructions"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <Button
            android:id="@+id/server_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_button_text_view"
            android:onClick="goToServer" />

        <Button
            android:id="@+id/client_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_button_text_view"
            android:onClick="goToClient" />

    </LinearLayout>

</LinearLayout>
