<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/questionId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/question_text_view"
        android:text="@string/question_temp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_5dp"
        android:textColor="#444444"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/option1_button_text_view"
        android:text="@string/option1_temp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_5dp"
        android:textColor="#444444"
        android:textSize="20sp"
        android:onClick="getAnswer" />

    <Button
        android:id="@+id/option2_button_text_view"
        android:text="@string/option2_temp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_5dp"
        android:textColor="#444444"
        android:textSize="20sp"
        android:onClick="getAnswer"/>

    <Button
        android:id="@+id/option3_button_text_view"
        android:text="@string/option3_temp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_5dp"
        android:textColor="#444444"
        android:textSize="20sp"
        android:onClick="getAnswer"/>

    <Button
        android:id="@+id/option4_button_text_view"
        android:text="@string/option4_temp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_5dp"
        android:textColor="#444444"
        android:textSize="20sp"
        android:onClick="getAnswer"/>

    <TextView
        android:id="@+id/chosen_answer_text_view"
        android:text="@string/no_answer_chosen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" />

</TableLayout>