<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/infinite_game_mode_intro_title"
        android:text="@string/infinite_game_mode_text_view"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="@dimen/sub_title_size"
        android:gravity="center_vertical|center"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical|center"
        android:padding="@dimen/padding_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/infinite_game_mode_description"
            android:text="@string/infinite_game_mode_description"/>
        <!-- TODO finish description -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5dp"
            android:id="@+id/please_select_text_view"
            android:text="@string/select_number_of_questions_message"/>
        <!-- TODO change "select number" message -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_vertical|center">

        <Spinner
            android:id="@+id/number_of_questions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/infinite_game_mode_start_text_view"
            android:text="@string/start_text_view"
            android:onClick="startInfiniteGame"/>

    </LinearLayout>
</LinearLayout>